# testpg

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  ai_strategies.py  conftest.py  data_augmentation.py  game_core.py  game_record.py  generate_data.py  main.py  model.py  neural_player.py  players.py  pyproject.toml  run_ai_battles.py  test_ai_strategies.py  test_game_core.py  test_game_record.py  test_integration.py  test_neural_player.py  test_players.py  test_threat_search.py  threat_search.py  train.py
docs/: AI_ALGORITHMS.md
game_logs/: .gitkeep  game_20260129_140128_593594.json  game_20260129_140404_011958.json  game_20260129_140601_494437.json  game_20260129_140801_084473.json  game_20260129_142507_367954.json  game_20260129_142648_033119.json  game_20260129_142831_431699.json  game_20260129_154012_283328.txt  game_20260129_154047_785531.csv  game_20260129_214211_944136.txt  game_20260129_214250_237708.txt  game_20260129_214337_177224.txt  game_20260129_215416_605212.txt  game_20260129_215704_326285.txt  game_20260129_215930_476616.txt  game_20260129_220221_474997.txt  game_20260129_220248_925599.txt  game_20260129_220303_617508.txt  game_20260129_220319_779322.txt  game_20260129_220355_237549.txt  game_20260129_220525_151437.txt  game_20260129_220827_805009.txt  game_20260129_220957_152049.txt  game_20260129_221225_107036.txt  game_20260129_221614_144082.txt  game_20260129_222727_141502.txt  game_20260129_222736_839671.txt  game_20260129_222858_549804.txt  game_20260129_222901_860927.txt  game_20260129_222927_950753.txt  game_20260129_222937_391437.txt  (+3 more)
(+5 files in other folders)
