[project]
name = "variant-go-platform"
version = "0.1.0"
description = "変則ルール対応のボードゲームプラットフォーム"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
ml = [
    "torch>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
